Fixed buttons sizing on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -166,7 +166,7 @@ aside {
     .skill-button h3 {
         font-weight: bold;
         letter-spacing: normal;
-        width: 140px;
+        width: 150px;
         background-color: #1B2021;
         color: #C2A878;
         padding: 14px;
